# Quartz

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
include/: alias.h  error.h  printer.h  propagate.h  quartz
include/details/math/: constants.h  exponential.h  gaussian.h  polynomial.h  runge_kutta.h  schrotinger_wrapper.h  sinusoidal.h  space.h  wigner_distribution.h
include/details/methods/: dvr.h  md.h  method_template.h
include/details/util/: type_converter.h
include/quartz_internal/: alias.h  error.h  printer.h  propagate.h  version.h.in
include/quartz_internal/details/math/: constants.h  exponential.h  gaussian.h  math_object.h  moyal_bracket.h  polynomial.h  runge_kutta.h  schrotinger_wrapper.h  sinusoidal.h  space.h  taylor_expand.h  trivial.h  util.h  wigner_distribution.h  wrapper.h
include/quartz_internal/details/methods/: cwa.h  cwa_smd.h  cwa_smd_opt.h  dmd.h  dvr.h  dvr_smd.h  enum.h  fixed_gaussian_basis.h  gaussian_cwa_smd.h  heller_cwa.h  heller_gaussian.h  m_dvr.h  md.h  method_template.h  packet.h  wd.h
include/quartz_internal/util/: auto_generator.h  check_member.h  elementary_function_operator.h  member_function_wrapper.h  type_converter.h
include/util/: check_member.h  member_function_wrapper.h  type_converter.h
src/: expectation.cpp  main.cpp  main_without_boost.cpp  run.cpp  run.h  wrapper.cpp
src/file_system/: json_parse.cpp  json_parse.h
src/math/: polynomial.cpp  polynomial.h
src/parse/: printer.h
src/parse/math/: exponential.cpp  exponential.h  gaussian.cpp  gaussian.h  math_object.cpp  math_object.h  polynomial.cpp  polynomial.h
src/parse/methods/: cwa.cpp  cwa.h  cwa_smd.cpp  cwa_smd.h  cwa_smd_opt.h  dvr.cpp  dvr.h  dvr_smd.cpp  dvr_smd.h  g_dvr_smd.h  m_dvr.cpp  m_dvr.h
src/util/: json_printer.h  ptree.cpp  ptree.h  resolve.h  time.h
test/: printer_test.cpp  propagate.cpp  propagate_test.cpp
test/details/math/: exponential_test.cpp  gaussian_test.cpp  math_object_test.cpp  moyal_bracket_test.cpp  polynomial_test.cpp  runge_kutta_test.cpp  schrotinger_wrapper.cpp  schrotinger_wrapper_test.cpp  taylor_expand_test.cpp
test/details/methods/: cwa_smd_opt_test.cpp  cwa_smd_test.cpp  dmd_test.cpp  dvr.cpp  dvr_smd_test.cpp  dvr_test.cpp  fixed_gaussian_basis_test.cpp  g_cwa_smd_test.cpp  heller_cwa_test.cpp  heller_gaussian_test.cpp  md_test.cpp  wd_test.cpp
test/utils/: check_member.cpp  check_member_test.cpp  elementary_function_operator.cpp  gsl_converter_test.cpp
